[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-spend"
version = "0.1.0"
description = "See exactly where your Anthropic API credits go"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
claude-spend = "claude_spend.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
